<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv"
        android:layout_width="450dp"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_height="350dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_focus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/get_focus"
                    android:textAllCaps="true" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/ib_close"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:contentDescription="@string/close"
                    android:foreground="?selectableItemBackground"
                    android:src="@drawable/ic_close" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_start"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/until"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/et_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/times"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="0"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/times"
                    android:textAllCaps="true" />

                <CheckBox
                    android:id="@+id/cb_quitWhenFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quit_when_finish"
                    android:textAllCaps="true" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <!--                <Button-->
                <!--                    android:id="@+id/btn_stop"-->
                <!--                    style="?android:attr/buttonBarButtonStyle"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="@string/stop" />-->

            </LinearLayout>

            <ScrollView
                android:id="@+id/sv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#2b2b2b">

                <com.duzhaokun123.logtextview.LogTextView
                    android:id="@+id/ltv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />
            </ScrollView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
